add item keranjang

--- a/src/pages/carts-page.f7.html
+++ b/src/pages/carts-page.f7.html
@@ -1,5 +1,5 @@
 <template>
-<div class="page" data-name="about">
+<div class="page" data-name="carts-page">
   <div class="navbar">
     <div class="navbar-bg"></div>
     <div class="navbar-inner sliding">
@@ -18,141 +18,6 @@
       <div class="card-content">
         <div class="list media-list">
           <ul>
-            <li class="item-content">
-              <div class="item-media"><img src="https://cdn.framework7.io/placeholder/fashion-88x88-4.jpg" width="44"/></div>
-              <div class="item-inner">
-                <div class="item-title-row">
-                  <div class="item-title">Yellow Submarine</div>
-                </div>
-                <div class="stepper stepper-small stepper-init">
-                  <div class="stepper-button-minus"></div>
-                  <div class="stepper-input-wrap">
-                    <input type="text" value="0" min="0" max="100" step="1" readonly>
-                  </div>
-                  <div class="stepper-button-plus"></div>
-                </div>
-              </div>
-            </li>
-            <li class="item-content">
-              <div class="item-media"><img src="https://cdn.framework7.io/placeholder/fashion-88x88-5.jpg" width="44"/></div>
-              <div class="item-inner">
-                <div class="item-title-row">
-                  <div class="item-title">Don't Stop Me Now</div>
-                </div>
-                <div class="stepper stepper-small stepper-init">
-                  <div class="stepper-button-minus"></div>
-                  <div class="stepper-input-wrap">
-                    <input type="text" value="0" min="0" max="100" step="1" readonly>
-                  </div>
-                  <div class="stepper-button-plus"></div>
-                </div>
-              </div>
-            </li>
-            <li class="item-content">
-              <div class="item-media"><img src="https://cdn.framework7.io/placeholder/fashion-88x88-6.jpg" width="44"/></div>
-              <div class="item-inner">
-                <div class="item-title-row">
-                  <div class="item-title">Billie Jean</div>
-                </div>
-                <div class="stepper stepper-small stepper-init">
-                  <div class="stepper-button-minus"></div>
-                  <div class="stepper-input-wrap">
-                    <input type="text" value="0" min="0" max="100" step="1" readonly>
-                  </div>
-                  <div class="stepper-button-plus"></div>
-                </div>
-              </div>
-            </li>
-            <li class="item-content">
-              <div class="item-media"><img src="https://cdn.framework7.io/placeholder/fashion-88x88-4.jpg" width="44"/></div>
-              <div class="item-inner">
-                <div class="item-title-row">
-                  <div class="item-title">Yellow Submarine</div>
-                </div>
-                <div class="stepper stepper-small stepper-init">
-                  <div class="stepper-button-minus"></div>
-                  <div class="stepper-input-wrap">
-                    <input type="text" value="0" min="0" max="100" step="1" readonly>
-                  </div>
-                  <div class="stepper-button-plus"></div>
-                </div>
-              </div>
-            </li>
-            <li class="item-content">
-              <div class="item-media"><img src="https://cdn.framework7.io/placeholder/fashion-88x88-5.jpg" width="44"/></div>
-              <div class="item-inner">
-                <div class="item-title-row">
-                  <div class="item-title">Don't Stop Me Now</div>
-                </div>
-                <div class="stepper stepper-small stepper-init">
-                  <div class="stepper-button-minus"></div>
-                  <div class="stepper-input-wrap">
-                    <input type="text" value="0" min="0" max="100" step="1" readonly>
-                  </div>
-                  <div class="stepper-button-plus"></div>
-                </div>
-              </div>
-            </li>
-            <li class="item-content">
-              <div class="item-media"><img src="https://cdn.framework7.io/placeholder/fashion-88x88-6.jpg" width="44"/></div>
-              <div class="item-inner">
-                <div class="item-title-row">
-                  <div class="item-title">Billie Jean</div>
-                </div>
-                <div class="stepper stepper-small stepper-init">
-                  <div class="stepper-button-minus"></div>
-                  <div class="stepper-input-wrap">
-                    <input type="text" value="0" min="0" max="100" step="1" readonly>
-                  </div>
-                  <div class="stepper-button-plus"></div>
-                </div>
-              </div>
-            </li>
-            <li class="item-content">
-              <div class="item-media"><img src="https://cdn.framework7.io/placeholder/fashion-88x88-4.jpg" width="44"/></div>
-              <div class="item-inner">
-                <div class="item-title-row">
-                  <div class="item-title">Yellow Submarine</div>
-                </div>
-                <div class="stepper stepper-small stepper-init">
-                  <div class="stepper-button-minus"></div>
-                  <div class="stepper-input-wrap">
-                    <input type="text" value="0" min="0" max="100" step="1" readonly>
-                  </div>
-                  <div class="stepper-button-plus"></div>
-                </div>
-              </div>
-            </li>
-            <li class="item-content">
-              <div class="item-media"><img src="https://cdn.framework7.io/placeholder/fashion-88x88-5.jpg" width="44"/></div>
-              <div class="item-inner">
-                <div class="item-title-row">
-                  <div class="item-title">Don't Stop Me Now</div>
-                </div>
-                <div class="stepper stepper-small stepper-init">
-                  <div class="stepper-button-minus"></div>
-                  <div class="stepper-input-wrap">
-                    <input type="text" value="0" min="0" max="100" step="1" readonly>
-                  </div>
-                  <div class="stepper-button-plus"></div>
-                </div>
-              </div>
-            </li>
-            <li class="item-content">
-              <div class="item-media"><img src="https://cdn.framework7.io/placeholder/fashion-88x88-6.jpg" width="44"/></div>
-              <div class="item-inner">
-                <div class="item-title-row">
-                  <div class="item-title">Billie Jean</div>
-                </div>
-                <div class="stepper stepper-small stepper-init">
-                  <div class="stepper-button-minus"></div>
-                  <div class="stepper-input-wrap">
-                    <input type="text" value="0" min="0" max="100" step="1" readonly>
-                  </div>
-                  <div class="stepper-button-plus"></div>
-                </div>
-              </div>
-            </li>
           </ul>
         </div>
       </div>
@@ -161,5 +26,90 @@
 </div>
 </template>
 <script>
-export default {};
+  export default {
+    // Lifecycle Hooks
+    beforeCreate() {
+      console.log('componentBeforeCreate', this)
+    },
+    created() {
+      console.log('componentCreated', this)
+    },
+    beforeMount() {
+      console.log('componentBeforeMount', this)
+    },
+    mounted() {
+      console.log('componentMounted cart page', this);
+      let $$ = this.$$;
+      let app = this.$app;
+      let page = $$('.page[data-name=carts-page]');
+      let pageContent = page.find('.page-content');
+      let pageContentBlockTitle = page.find('.block-title');
+      let pageContentUl = pageContent.find('ul');
+
+      app.localforage.getItem('carts').then(function(value) {
+          // This code runs once the value has been loaded
+          // from the offline store.
+          // console.log(value);
+          pageContentBlockTitle.css({"display":"none"});
+          value.rowsData.forEach(function(a,b){
+            app.request.getJSON(`https://m.anakhebatindonesia.com/books/${a.id}`, function (data) {
+              pageContentUl.append(`
+                <li class="item-content">
+                  <div class="item-media"><img src="${data.data.image.thumbnail}" width="44"/></div>
+                  <div class="item-inner">
+                    <div class="item-title-row">
+                      <div class="item-title">${data.data.title}</div>
+                    </div>
+                    <div class="stepper stepper-small stepper-init">
+                      <div class="stepper-button-minus"></div>
+                      <div class="stepper-input-wrap">
+                        <input type="text" value="${a.qty}" min="0" max="100" step="1" readonly>
+                      </div>
+                      <div class="stepper-button-plus"></div>
+                    </div>
+                  </div>
+                </li>              
+              `);
+              console.log(data.data)
+            })
+            // console.log('a',a)
+            // console.log('b',b)
+          });
+      }).catch(function(err) {
+          // This code runs if there were any errors
+          console.log(err);
+      });
+      // app.request.getJSON(`https://m.anakhebatindonesia.com/books/${bookId}`, function (data) {
+    },
+    beforeDestroy() {
+      console.log('componentBeforeDestroy', this);
+    },
+    destroyed() {
+      console.log('componentDestroyed', this);
+    },
+    // Page Events
+    on: {
+      pageMounted: function(e, page) {
+        console.log('pageMounted', page);
+      },
+      pageInit: function(e, page) {
+        console.log('pageInit', page);
+      },
+      pageBeforeIn: function(e, page) {
+        console.log('pageBeforeIn', page);
+      },
+      pageAfterIn: function(e, page) {
+        console.log('pageAfterIn', page);
+      },
+      pageBeforeOut: function(e, page) {
+        console.log('pageBeforeOut', page);
+      },
+      pageAfterOut: function(e, page) {
+        console.log('pageAfterOut', page);
+      },
+      pageBeforeRemove: function(e, page) {
+        console.log('pageBeforeRemove', page);
+      },
+    }
+  }
 </script>
