--- a/src/pages/home.f7.html
+++ b/src/pages/home.f7.html
@@ -430,7 +430,7 @@
         console.log('pageBeforeIn', page);
       },
       pageAfterIn: function(e, page) {
-        console.log('pageAfterIn', page);
+        console.log('pageAfterIn home', page);
       },
       pageBeforeOut: function(e, page) {
         console.log('pageBeforeOut', page);
