--- a/src/pages/carts-page.f7.html
+++ b/src/pages/carts-page.f7.html
@@ -60,6 +60,7 @@
                       <div class="item-title-row">
                         <div class="item-title">${data.data.title}</div>
                       </div>
+                      <div class="text-currency-primary"><span class="text-currency-format">Rp</span>${data.data.price.idr.text}</div>
                       <div class="stepper stepper-small stepper-init">
                         <div class="stepper-button-minus"></div>
                         <div class="stepper-input-wrap">
