tukar posisi menu join reseller dan menu kategori

--- a/src/app.f7.html
+++ b/src/app.f7.html
@@ -47,10 +47,10 @@
             <!-- Label text -->
             <span class="tabbar-label">Home</span>
           </a>
-          <a href="#view-kategori" class="tab-link">
-            <i class="icon f7-icons">list_dash</i>
+          <a href="#view-join-reseller" class="tab-link">
+            <i class="icon f7-icons">person_badge_plus_fill</i>
             <!-- Label text -->
-            <span class="tabbar-label">Kategori</span>
+            <span class="tabbar-label">Join Reseller</span>
           </a>
           <a href="#view-keranjang" class="tab-link">
             <i class="icon f7-icons">cart<span class="badge color-red cart-label" style="display: none;">0</span></i>
@@ -74,8 +74,8 @@
         <!-- Home page will be loaded here dynamically from / route -->
       </div>
 
-      <!-- Kategori View -->
-      <div id="view-kategori" class="view view-init tab" data-name="kategori" data-url="/kategori/">
+      <!-- Join Reseller View -->
+      <div id="view-join-reseller" class="view view-init tab" data-name="kategori" data-url="/page/join-reseller#Join Reseller">
         <!-- kategori page will be loaded here dynamically from /kategori/ route -->
       </div>
 
