--- a/src/pages/home.f7.html
+++ b/src/pages/home.f7.html
@@ -33,13 +33,13 @@
      
       <div class="block">
         <div class="row">
-          <a href="/page/join-reseller#Join Reseller" class="col" style="display: grid;">
-            <i class="icon f7-icons" style="width: auto;">person_badge_plus_fill</i>
-            <span class="text-align-center">Join Reseller</span>
-          </a>
           <a href="/page/faq#FAQ (Frequently asked questions)" class="col" style="display: grid;">
             <i class="icon f7-icons" style="width: auto;">question_diamond</i>
             <span class="text-align-center">FAQ</span>
+          </a>
+          <a href="/kategori/" class="col" style="display: grid;">
+            <i class="icon f7-icons" style="width: auto;">list_dash</i>
+            <span class="text-align-center">Kategori</span>
           </a>
           <a href="/page/bantuan#Kontak Kami" class="col" style="display: grid;">
             <i class="icon f7-icons" style="width: auto;">bubble_left_bubble_right</i>
