--- a/src/pages/static-page.f7.html
+++ b/src/pages/static-page.f7.html
@@ -28,18 +28,8 @@
 <script>
   export default {
     // Lifecycle Hooks
-    beforeCreate() {
-      console.log('componentBeforeCreate', this)
-    },
-    created() {
-      console.log('componentCreated', this)
-    },
-    beforeMount() {
-      console.log('componentBeforeMount', this)
-    },
     mounted() {
-
-      console.log('componentMounted', this);
+      console.log('# STATIC PAGE ------------------------------------------------------------------');
 
       let $$ = this.$$;
       let app = this.$app;
@@ -149,16 +139,11 @@
       app.preloader.hide();
       
     },
-    beforeDestroy() {
-      console.log('componentBeforeDestroy', this);
-    },
     destroyed() {
       let $$ = this.$$;
       /* jika halaman ini bukan join reseller ketika meninggalkan halaman ini tampilkan kembali toolbar utama */
       if (this.$route.params.pageName != 'join-reseller')
         $$('.toolbar-main').show()
-
-      console.log('componentDestroyed', this);
     },
     // Component Data
     data: function () {
@@ -183,31 +168,5 @@
         return str;
       }
     },
-    // Page Events
-    on: {
-      pageMounted: function(e, page) {
-        console.log('pageMounted', page);
-      },
-      pageInit: function(e, page) {
-        console.log('pageInit', page);
-      },
-      pageBeforeIn: function(e, page) {
-        console.log('pageBeforeIn', page);
-      },
-      pageAfterIn: function(e, page) {
-        // let app = this.$app;
-        // app.toolbar.hide('.toolbar-main');
-        // console.log('pageAfterIn', page);
-      },
-      pageBeforeOut: function(e, page) {
-        console.log('pageBeforeOut', page);
-      },
-      pageAfterOut: function(e, page) {
-        console.log('pageAfterOut', page);
-      },
-      pageBeforeRemove: function(e, page) {
-        console.log('pageBeforeRemove', page);
-      },
-    }
   }
 </script>
