--- a/src/pages/books-detail.f7.html
+++ b/src/pages/books-detail.f7.html
@@ -11,7 +11,7 @@
         </div>
         <div class="title" id="titleDetailBuku">Nama Buku</div>
         <div class="right">
-          <a href="/keranjang/#view-keranjang" class="link icon-only">
+          <a href="#view-keranjang" class="link icon-only">
             <i class="icon f7-icons">cart<span class="badge color-red cart-label" style="display: none;">0</span></i>
           </a>
         </div>
@@ -48,10 +48,11 @@
 <script>
   export default {
     // Lifecycle Hooks
+    beforeMount() {
+      this.toolbarBottomHide();
+    },
     mounted() {
-      console.log('page : detail buku');
-      console.log('componentMounted', this);
-
+      console.log('# BOOK DETAILS -----------------------------------------------------------------');
       let $$ = this.$$;
       let app = this.$app;
       let router = this.$router;
@@ -67,7 +68,6 @@
             let cartRows = value.rowsData.length;
             cartLabel.text(cartRows);
             cartLabel.css({"display" : "inline-flex"});
-            console.log(cartRows)
           }
           
           // console.log();
@@ -247,12 +247,6 @@
         app.preloader.hide();
       });
     },
-    // beforeDestroy() {
-    //   console.log('componentBeforeDestroy', this);
-    // },
-    // destroyed() {
-    //   console.log('componentDestroyed', this);
-    // },
     // Component Data
     data: function () {
       // Must return an object
@@ -437,14 +431,16 @@
           // console.log('getItem error: ',err)
         });
         
+      },
+      toolbarBottomHide: function() {
+        let $$ = this.$$;
+        $$('.toolbar-main').hide();
       }
     },
     // Page Events
     on: {
-      pageAfterIn: function(e, page) {
-        let app = this.$app;
-        app.toolbar.hide('.toolbar-main');
-        console.log('pageAfterIn', page);
+      pageInit: function(e, page) {
+        this.toolbarBottomHide();
       },
     }
   }
