--- a/src/pages/carts-page.f7.html
+++ b/src/pages/carts-page.f7.html
@@ -28,23 +28,21 @@
 <script>
   export default {
     // Lifecycle Hooks
-    beforeCreate() {
-      console.log('componentBeforeCreate', this)
-    },
-    created() {
-      console.log('componentCreated', this)
-    },
-    beforeMount() {
-      console.log('componentBeforeMount', this)
-    },
     mounted() {
-      console.log('componentMounted cart page', this);
+      console.log('# CART PAGE --------------------------------------------------------------------');
       let $$ = this.$$;
+      let route = this.$route;
       let app = this.$app;
       let page = $$('.page[data-name=carts-page]');
       let pageContent = page.find('.page-content');
       let pageContentBlockTitle = page.find('.block-title');
       let pageContentUl = pageContent.find('ul');
+
+      if ( route.hash ) {
+        if ( route.hash == 'view-keranjang' ) {
+          console.log()
+        }
+      }
 
       app.localforage.getItem('carts').then(function(value) {
           // This code runs once the value has been loaded
@@ -71,10 +69,8 @@
                     </div>
                   </li>              
                 `);
-                console.log(data.data)
+                // console.log(data.data)
               })
-              // console.log('a',a)
-              // console.log('b',b)
             });
             
             pageContentBlockTitle.css({"display":"none"});
@@ -87,35 +83,5 @@
       });
       // app.request.getJSON(`https://m.anakhebatindonesia.com/books/${bookId}`, function (data) {
     },
-    beforeDestroy() {
-      console.log('componentBeforeDestroy', this);
-    },
-    destroyed() {
-      console.log('componentDestroyed', this);
-    },
-    // Page Events
-    on: {
-      pageMounted: function(e, page) {
-        console.log('pageMounted', page);
-      },
-      pageInit: function(e, page) {
-        console.log('pageInit', page);
-      },
-      pageBeforeIn: function(e, page) {
-        console.log('pageBeforeIn', page);
-      },
-      pageAfterIn: function(e, page) {
-        console.log('pageAfterIn', page);
-      },
-      pageBeforeOut: function(e, page) {
-        console.log('pageBeforeOut', page);
-      },
-      pageAfterOut: function(e, page) {
-        console.log('pageAfterOut', page);
-      },
-      pageBeforeRemove: function(e, page) {
-        console.log('pageBeforeRemove', page);
-      },
-    }
   }
 </script>
