--- a/src/pages/dynamic-route.f7.html
+++ b/src/pages/dynamic-route.f7.html
@@ -130,4 +130,11 @@
       },
     }
   }
+  // $(document).on('click', '.route-tab-link', function (e) {
+  //   var url = $(this).attr('href');
+  //   var view = app.views.get($(this).attr('data-view'));
+  //   var tabId = $(this).attr('data-tab');
+  //   app.tab.show(tabId);
+  //   view.router.navigate(url);
+  // });
 </script>
